# lolita

./: .gitignore  CMakeLists.txt  LICENSE
src/: code.cpp  code.hpp  except.hpp  feeder.cpp  feeder.hpp  lex.cpp  lex.hpp  loli.cpp  noncopyable.hpp  object.cpp  object.hpp  opcodes.hpp  parser.cpp  parser.hpp  slice.hpp
